wip: Get prompts route
